--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -104,7 +104,8 @@
                             <bcf:outputpl value="#{itempasek.kosztyuzyskania}"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
-                            <p:commandButton icon="fa fa-print" actionListener="#{pasekwynagrodzenView.drukuj(itempasek)}" global="false"/>
+                            <p:commandButton icon="pi pi-print" actionListener="#{pasekwynagrodzenView.drukuj(itempasek)}" global="false"/>
+                            <p:commandButton icon="pi pi-fast-forward" actionListener="#{pasekwynagrodzenView.przelicz(itempasek)}" global="false" update="PasekwynagrodzenListForm"/>
                         </p:column>
                     </p:row>
                     <!--                        <p:column>
@@ -212,7 +213,7 @@
             <p:rowExpansion>
                 <p:dataTable id="datalist1" value="#{itempasek.pobierzskladniki}" var="itempasekszcz"
                              rowIndexVar="indexpasekszcz"
-                             style="height: 200px; overflow-y: scroll;width: 1300px;"
+                             style="height: 200px; overflow-y: scroll;width: 1370px;"
                              >
                     <p:column style="text-align: center;" headerText="lp" width="40">
                         <h:outputText value="#{itempasekszcz.lp}"/>
@@ -227,6 +228,7 @@
                         <h:outputText value="za urlop" rendered="#{itempasekszcz.urlopSP}"/>
                         <h:outputText value="redukcja" rendered="#{itempasekszcz.redukcjaSP}"/>
                         <h:outputText value="potrącenie" style="color:red;" rendered="#{itempasekszcz.potracenie}"/>
+                        <h:outputText value="#{itempasekszcz.uwagi}" rendered="#{itempasekszcz.uwagi ne null}"/>
                     </p:column>
                     <p:column headerText="dni" width="60">
                         <h:outputText value="#{itempasekszcz.dniobowiazku}/#{itempasekszcz.dniprzepracowane}"/>
@@ -254,6 +256,9 @@
                     </p:column>
                     <p:column headerText="redukcja" width="70">
                         <bcf:outputpl value="#{itempasekszcz.redukcja}"/>
+                    </p:column>
+                    <p:column headerText="waluta" width="30">
+                        <bcf:outputpl value="#{itempasekszcz.waluta}"/>
                     </p:column>
                 </p:dataTable>
             </p:rowExpansion>
