--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -94,6 +94,14 @@
                      <h:outputText value="- przelicz, zachowaj i wydrukuj listę" style="color: green"/>
                      <h:outputText value="- wyślij informacje do pracodawcy i pracownika" style="color: green"/>
                      </p:panelGrid>
+                     <p:panelGrid columns="1" style="padding: 20px; overflow-y: no-display;">
+                         <h:outputText value="rozliczenie oddelegowania:" style="color: blue"/>
+                         <h:outputText value="- zdefiniować składnik wynagrodzania - wynagrodzenie godzinowe" style="color: blue"/>
+                         <h:outputText value="i oznaczyć go jako oddelegowanie" style="color: blue"/>
+                         <h:outputText value="- dodać zmienną do składnika jako stawkę na godzinę w walucie" style="color: blue"/>
+                         <h:outputText value="- nanieść nieobecność typu Z - praca za granicą" style="color: blue"/>
+                         <h:outputText value=" - przeliczyć, zachować i wydrukować listę w formacie oddelegowanie" style="color: blue"/>
+                     </p:panelGrid>
                 </ui:define>
 
         </ui:composition>
