--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
@@ -85,10 +85,10 @@
                             </p:panelGrid>
                     </h:form>
                     <h:form id="KalendarzmiesiacCreateRokForm">
-<!--                        <p:panelGrid columns="2">
+                        <p:panelGrid columns="2">
                             <p:outputLabel value="generuj kalendarz za rok" for="rokkal" />
                             <p:commandButton id="rokkal" value="generuj" styleClass="buttonnorm" actionListener="#{kalendarzmiesiacView.generujrok()}" update="KalendarzmiesiacSaRokForm"/>
-                        </p:panelGrid>-->
+                        </p:panelGrid>
                     </h:form>
                 </p:panelGrid>
             </h:panelGroup>
