--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_kalendarzmiesiac.xhtml
@@ -20,10 +20,10 @@
                                 <p:ajax event="blur" listener="#{kalendarzmiesiacView.pobierzkalendarzeprac}" partialSubmit="true" global="false" update=":KalendarzmiesiacListForm:datalist KalendarzmiesiacSaRokForm"/>
                             </p:inputText>
                             <p:outputLabel value="miesiąc" for="mc" />
-                            <p:inputText id="mc" value="#{kalendarzmiesiacView.selected.mc}" title="miesiąc" >
-                                <p:ajax event="blur" listener="#{kalendarzmiesiacView.zrobkalendarzumowa}" partialSubmit="true" global="false" update=":KalendarzmiesiacListForm:datalist KalendarzmiesiacSaRokForm"/>
-                            </p:inputText>
-
+                            <p:selectOneMenu id="mc" value="#{kalendarzmiesiacView.selected.mc}"  style="width: 100px;">
+                                <f:selectItems value="#{mce.mceList}"/>
+                                <p:ajax event="change" partialSubmit="true" global="false" listener="#{kalendarzmiesiacView.zrobkalendarzumowa}" update=":KalendarzmiesiacListForm:datalist KalendarzmiesiacSaRokForm"/>
+                            </p:selectOneMenu>
                         </p:panelGrid>
                     </h:form>
                     
