--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac.xhtml
@@ -12,8 +12,13 @@
               fitViewport="true">
         <p:ajax event="open" listener="#{pasekwynagrodzenView.init()}" update="DefinicjalistaplacCreateForm DefinicjalistaplacCreateForm1 KursDataLPForm DefinicjalistaplacCreateForm2 PasekwynagrodzenListForm" global="false"/>
         <h:outputText value="W przypadku braku osoby na zleceniu na liście proszę sprawdzić, czy wystawiono rachunek." style="color: #136e13;margin-top: 10px;"/>
-        <p:outputPanel style="height: 245px">
-            
+        <p:outputPanel style="height: 275px">
+            <style>
+                .ui-picklist .ui-picklist-list{
+                    width: 300px !important;
+                }
+
+            </style>
                 <h:panelGroup >
                     
                     <p:panelGrid columns="6" rendered="#{pasekwynagrodzenView.listadefinicjalistaplac ne null}">
@@ -64,7 +69,7 @@
                          <h:form id="DefinicjalistaplacCreateForm2">
                             <p:outputLabel value="" for="wybranypracownik" />
                             <p:pickList id="wybranypracownik" value="#{pasekwynagrodzenView.listakalendarzmiesiac}" var="kalendarzItem" itemLabel="#{kalendarzItem.angaz.pracownik.nazwiskoImie}" itemValue="#{kalendarzItem}" 
-                                        showCheckbox="true" converter="#{kalendarzmiesiacConverter}"/>
+                                        showCheckbox="true" converter="#{kalendarzmiesiacConverter}" showSourceFilter="true" showTargetFilter="true" filterMatchMode="contains"/>
                             <p:panelGrid columns="5" >
                             <p:commandButton styleClass="buttonnorm" actionListener="#{pasekwynagrodzenView.przelicz()}" value="oblicz" update="PasekwynagrodzenListForm" />
                             <p:commandButton styleClass="buttonnorm2" actionListener="#{pasekwynagrodzenView.mailListaPlac}" value="mail" update="PasekwynagrodzenListForm" />
