ekwiwalent za urlop

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_urlop.xhtml
@@ -4,11 +4,12 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
-    >
+        
+    xmlns:bcf="http://brzaskun.com/facelets">
     <p:dialog id="dialgoczaspracyurlop" header="Zestawienie urlopu i nieobecności" widgetVar="dialgoczaspracyurlop"  
               resizable="false"  onShow="ustawdialog('dialgoczaspracyurlop','centertile',1650,800);" closeOnEscape="true" onHide="resetujdialog('dialgoczaspracyurlop');" 
               fitViewport="true">
-        <p:ajax event="open" listener="#{pracownikNieobecnoscView.init()}" update="akordeon:PracownikUrlopForm akordeon:PracownikChorobaForm akordeon:PracownikZasilekForm" global="false"/>
+        <p:ajax event="open" listener="#{pracownikNieobecnoscView.init()}" update="akordeon:PracownikUrlopForm akordeon:PracownikChorobaForm akordeon:PracownikZasilekForm akordeon:EkwiwalentForm" global="false"/>
         <p:outputPanel>
             <p:tabView id="akordeon">
                     <p:tab title="wykorzystanie urlopu rok biezacy">
@@ -82,11 +83,125 @@
                     </p:tab>
                  <p:tab title="naliczenie ekwiwalentu za urlop">
                      <h:form id="EkwiwalentForm">
-                         <p:panelGrid columns="4">
+                         <p:panelGrid columns="2">
                              <h:outputText value="naliczenie na dzień"/>
-                             <p:inputText value="#{nieobecnoscView.selected.dataod}" title="naliczenie na dzien"  placeholder="____-__-__" maxlength="10" required="true" requiredMessage="Wprowadź datę naliczenia">
-                                        <p:ajax event="blur" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" />
+                             <p:inputText value="#{pracownikNieobecnoscView.ekwiwalent.dataod}" title="naliczenie na dzien"  placeholder="____-__-__" maxlength="10" required="true" requiredMessage="Wprowadź datę naliczenia">
+                                 <p:ajax event="blur" onstart="ustawDateSprzedazy(#{wpisView.rokWpisu},#{wpisView.miesiacWpisu});" partialSubmit="true" global="false" listener="#{pracownikNieobecnoscView.obliczekwiwalent}" update="akordeon:EkwiwalentForm"/>
                             </p:inputText>
+                             <h:outputText value="współczynnik dla ekwawalentu "/>
+                             <bcf:outputpl value="#{pracownikNieobecnoscView.wspolczynnikEkwiwalent.kwota}"/>
+                             <h:outputText value="etat "/>
+                             <h:outputText value="#{pracownikNieobecnoscView.wybranyetat.getEtat()}"/>
+                             <h:outputText value="ekwiwalent składniki stałe "/>
+                             <bcf:outputpl value="#{pracownikNieobecnoscView.ewiewalentskladnikistale}"/>
+                        </p:panelGrid>
+                         <p:panelGrid columns="1">
+                             <p:dataTable id="datalist2" value="#{pracownikNieobecnoscView.skladnikistale}" var="itempasekpotr"
+                                             rowIndexVar="indexpasekszcz2" emptyMessage="Nie ma danych"  rowKey="#{itempasekpotr.id}"
+                                             style="height: 100px; overflow-y: scroll;width: 700px;padding: 20px;" 
+                                             >
+                                    <p:column style="text-align: center;" headerText="lp" width="40">
+                                        <h:outputText value="#{indexpasekszcz2+1}"/>
+                                    </p:column>
+                                    <p:column headerText="składnik" width="200" >
+                                        <h:outputText value="#{itempasekpotr.skladnikwynagrodzenia.rodzajwynagrodzenia.opisskrocony}"/>
+                                    </p:column>
+                                    <p:column headerText="dni" width="40" style="text-align: center;">
+                                        <h:outputText value="#{itempasekpotr.liczbadniurlopu}"/>
+                                    </p:column>
+                                    <p:column headerText="stawka dzienna" width="40">
+                                        <bcf:outputpl value="#{itempasekpotr.stawkadzienna}"/>
+                                    </p:column>
+                                    <p:column headerText="godziny" width="40" style="text-align: center;">
+                                        <h:outputText value="#{itempasekpotr.liczbagodzinurlopu}"/>
+                                    </p:column>
+                                    <p:column headerText="stawka godzin." width="40">
+                                        <bcf:outputpl value="#{itempasekpotr.stawkagodzinowa}"/>
+                                    </p:column>
+                                    <p:column headerText="kwota do listy płac" width="60">
+                                        <bcf:outputpl value="#{itempasekpotr.kwota}"/>
+                                    </p:column>
+                             </p:dataTable>
+                         </p:panelGrid>
+                         <p:panelGrid columns="2" style="width: 360px;">
+                             <h:outputText value="ekwiwalent składniki zmienne "/>
+                             <bcf:outputpl value="#{pracownikNieobecnoscView.ewiewalentskladnikizmienne}"/>
+                         </p:panelGrid>
+                         <p:panelGrid columns="1">
+                             <p:dataTable id="datalist4" value="#{pracownikNieobecnoscView.skladnikizmienne}" var="itempasekpotr1"
+                                             rowIndexVar="indexpasekszcz2" emptyMessage="Nie ma danych"  rowKey="#{itempasekpotr1.id}"
+                                             style="height: 200px; overflow-y: scroll;width: 900px;padding: 20px;" 
+                                             >
+                                    <p:column width="20" style="text-align: center;">
+                                        <p:rowToggler rendered="#{itempasekpotr1.sredniadlanieobecnosciList.size() gt 0}"/>
+                                    </p:column>
+                                    <p:column style="text-align: center;" headerText="lp" width="40">
+                                        <h:outputText value="#{indexpasekszcz2+1}"/>
+                                    </p:column>
+                                    <p:column headerText="składnik" width="200" >
+                                        <h:outputText value="#{itempasekpotr1.skladnikwynagrodzenia.rodzajwynagrodzenia.opisskrocony}"/>
+                                    </p:column>
+                                    <p:column headerText="dni" width="40" style="text-align: center;">
+                                        <h:outputText value="#{itempasekpotr1.liczbadniurlopu}"/>
+                                    </p:column>
+                                    <p:column headerText="stawka dzienna" width="40">
+                                        <bcf:outputpl value="#{itempasekpotr1.stawkadzienna}"/>
+                                    </p:column>
+                                    <p:column headerText="godziny" width="40" style="text-align: center;">
+                                        <h:outputText value="#{itempasekpotr1.liczbagodzinurlopu}"/>
+                                    </p:column>
+                                    <p:column headerText="stawka godzin." width="40">
+                                        <bcf:outputpl value="#{itempasekpotr1.stawkagodzinowa}"/>
+                                    </p:column>
+                                    <p:column headerText="kwota do listy płac" width="60">
+                                        <bcf:outputpl value="#{itempasekpotr1.kwota}"/>
+                                    </p:column>
+                                 <p:rowExpansion>
+                                        <p:dataTable id="datalistsrednia1" value="#{itempasekpotr1.sredniadlanieobecnosciList}" var="itempaseksrednia"
+                                                     rowIndexVar="itempaseksredniaid" rowKey="#{itempaseksrednia.id}"
+                                                     style="height: 200px; overflow-y: scroll;width: 800px;"
+                                                     >
+                                            <p:column style="text-align: center;" headerText="lp" width="40">
+                                                <h:outputText value="#{itempaseksredniaid+1}"/>
+                                            </p:column>
+                                            <p:column headerText="rok" width="40" style="text-align: center;"  sortBy="#{itempaseksrednia.rok}" sortOrder="desc" sortPriority="0">
+                                                <h:outputText value="#{itempaseksrednia.rok}"/>
+                                            </p:column>
+                                            <p:column headerText="mc" width="40" style="text-align: center;" sortBy="#{itempaseksrednia.mc}" sortOrder="desc" sortPriority="1">
+                                                <h:outputText value="#{itempaseksrednia.mc}"/>
+                                            </p:column>
+                                            <p:column headerText="dni">
+                                                <h:outputText value="#{itempaseksrednia.dninalezne}"/>
+                                                <h:outputText value="/"/>
+                                                <h:outputText value="#{itempaseksrednia.dnifaktyczne}"/>
+                                            </p:column>
+                                            <p:column headerText="godziny">
+                                                <h:outputText value="#{itempaseksrednia.godzinynalezne}"/>
+                                                <h:outputText value="/"/>
+                                                <h:outputText value="#{itempaseksrednia.godzinyfaktyczne}"/>
+                                            </p:column>
+                                            <p:column headerText="kwota" width="80">
+                                                <bcf:outputpl value="#{itempaseksrednia.kwotawyplacona}"/>
+                                            </p:column>
+                                            <p:column headerText="stawka godzin." width="40">
+                                                <bcf:outputpl value="#{itempaseksrednia.stawkagodzinowa}"/>
+                                            </p:column>
+                                            <p:column headerText="kwota zwaloryz." width="50">
+                                                <bcf:outputpl value="#{itempaseksrednia.kwotazwaloryzowana}"/>
+                                            </p:column>
+                                            <p:column headerText="godzina zwaloryz." width="50">
+                                                <bcf:outputpl value="#{itempaseksrednia.godzinazwaloryzowana}"/>
+                                            </p:column>
+                                            <p:column headerText="podst. pop. choroba" width="60">
+                                                <bcf:outputpl value="#{itempaseksrednia.podstawapoprzedniachoroba}"/>
+                                            </p:column>
+                                        </p:dataTable>
+                                    </p:rowExpansion>
+                             </p:dataTable>
+                         </p:panelGrid>
+                         <p:panelGrid columns="2" style="width: 360px;">
+                             <h:outputText value="ekwiwalent składniki razem "/>
+                             <bcf:outputpl value="#{pracownikNieobecnoscView.ekwiwalentrazem}"/>
                          </p:panelGrid>
                      </h:form>
                  </p:tab>
