--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
@@ -9,7 +9,7 @@
       
         <h:form id="formokresowe">
            
-            <p:panelGrid id="panelsumokresowe">
+            <p:panelGrid id="panelsumokresowe" rendered="#{WpisView.biuroiszef eq true}">
                 <f:facet name="header">
                     <p:row>
                     <p:column>
@@ -41,7 +41,7 @@
                     </p:column>
                 </p:row>
             </p:panelGrid>
-            <p:panelGrid columns="9">
+            <p:panelGrid columns="9"  rendered="#{WpisView.biuroiszef eq true}">
 <!--                <h:outputText value="Procent waloryzacji 100=100%"/>
                 <p:inputNumber  id="kwotawaloryzacji" value="#{fakturaView.waloryzajca}"  decimalPlaces="2"  inputStyle="text-align: right;" symbol=" %" symbolPosition="s" decimalSeparator="."  maxValue="100">
                     <p:ajax event="blur" partialSubmit="true" global="false"/>
