--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -26,7 +26,7 @@
         </style>
         <h:form id="formsporzadzone">
            
-            <p:panelGrid id="panelsum" style="height: 40px;">
+            <p:panelGrid id="panelsum" style="height: 40px;" rendered="#{WpisView.biuroiszef eq true}">
                 <f:facet name="header">
                     <p:row>
                         <p:column>
@@ -68,7 +68,7 @@
                 <p:editor id="editor"  widgetVar="editorWidget" value="#{fakturaView.wiadomoscdodatkowa}" width="800" height="300" rendered="#{fakturaView.podazedytorvar}">
                     
                 </p:editor>
-                <p:commandButton value="drukuj zestawienie" actionListener="#{fakturaView.drukujfakturysporzadzone}" style="width: 150px; margin-left: 30px;"/>
+                <p:commandButton value="drukuj zestawienie" actionListener="#{fakturaView.drukujfakturysporzadzone}" style="width: 150px; margin-left: 30px;"  rendered="#{WpisView.biuroiszef eq true}"/>
                 <p:selectBooleanCheckbox value="#{fakturaView.pokaztylkoniewyslane}" itemLabel="tylko niewysłane" style="margin-left: 100px;">
                     <p:ajax event="change" listener="#{fakturaView.init()}" partialSubmit="true" update=":akordeon:formsporzadzone akordeon:formsporzadzone:dokumentyLista"/>
                 </p:selectBooleanCheckbox>
@@ -120,11 +120,11 @@
                           filterMatchMode="contains"  width="60">
                     <h:outputText value="#{wpis.terminzaplaty.substring(2)}"/>
                 </p:column>
-                <p:column styleClass="data2" headerText="netto"  sortBy="#{wpis.nettoFakturaView}" filterBy="#{wpis.nettoFakturaView}" filterMatchMode="contains"   width="70">
+                <p:column styleClass="data2" headerText="netto"  sortBy="#{wpis.nettoFakturaView}" filterBy="#{wpis.nettoFakturaView}" filterMatchMode="contains"   width="70" rendered="#{WpisView.biuroiszef eq true}">
                     <bcf:outputpl value="#{wpis.nettoFakturaView}"/>
                     <h:outputText value=" #{wpis.walutafaktury}" rendered="#{wpis.walutafaktury ne 'PLN'}"/>
                 </p:column>
-                <p:column styleClass="data2" headerText="brutto"  sortBy="#{wpis.bruttoFakturaView}" filterBy="#{wpis.bruttoFakturaView}" filterMatchMode="contains"   width="70">
+                <p:column styleClass="data2" headerText="brutto"  sortBy="#{wpis.bruttoFakturaView}" filterBy="#{wpis.bruttoFakturaView}" filterMatchMode="contains"   width="70" rendered="#{WpisView.biuroiszef eq true}">
                     <bcf:outputpl value="#{wpis.bruttoFakturaView}"/>
                     <h:outputText value=" #{wpis.walutafaktury}" rendered="#{wpis.walutafaktury ne 'PLN'}"/>
                     <bcf:outputpl value="#{wpis.bruttoFakturaViewPLN}" rendered="#{wpis.walutafaktury ne 'PLN'}"/>
