nowe faktury okresowe

--- a/npkpir_23/web/wspolny/sub/faktura.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura.xhtml
@@ -50,6 +50,7 @@
         <ui:include src="faktura/faktura_proforma.xhtml"/>
         <ui:include src="faktura/faktura_archiwum.xhtml"/>
         <ui:include src="faktura/faktura_okresowe.xhtml"/>
+        <ui:include src="faktura/faktura_okresowe_2.xhtml"/>
         <ui:include src="faktura/faktura_zestawienie.xhtml"/>
     </p:tabView>
  
