--- a/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
@@ -107,7 +107,7 @@
             <h:panelGroup id="displayzlecenie" rendered="#{umowaView.rodzajumowy eq '2'}">
                 <h:outputText value="Dodajesz nową umowę zlecenia i o dzieło" style="color:green; margin-left: 50px; font-weight: bolder;" rendered="#{umowaView.selected.id eq null}"/>
                 <h:outputText value="Zmieniasz istniejącą umowę" style="color:blue; margin-left: 50px; font-weight: bolder;" rendered="#{umowaView.selected.id ne null}"/>
-                <p:panelGrid columns="4" rendered="#{umowaView.selected != null}">
+                <p:panelGrid columns="2" rendered="#{umowaView.selected != null}">
                     <p:panelGrid columns="2">
                         <p:outputLabel value="angaz" for="angaz" />
                         <h:outputText id="angaz" value="#{wpisView.angaz.pracownik.nazwiskoImie}"/>
@@ -150,15 +150,7 @@
                         <p:outputLabel value="termin rozpoczecia pracy" for="datarozp" />
                         <p:inputText id="datarozp" value="#{umowaView.selected.terminrozpoczeciapracy}" title="termin rozpoczecia pracy" styleClass="dataUmowy"  placeholder="____-__-__"  maxlength="10"/>
 
-                        <!--                        <p:outputLabel value="data spoleczne" for="dataspoleczne1" />
-                                                <p:inputText id="dataspoleczne1" value="#{umowaView.selected.dataspoleczne}" title="data spoleczne"  placeholder="____-__-__"  styleClass="dataUmowy"/>
-                                                <p:outputLabel value="data zdrowotne" for="datazdrowotne1" />
-                                                <p:inputText id="datazdrowotne1" value="#{umowaView.selected.datazdrowotne}" title="data zdrowotne"  placeholder="____-__-__"  styleClass="dataUmowy"/>-->
-                        <p:outputLabel value="nierezydent" for="nierezydent" style="color: #97B0F8;"/>
-                        <p:selectBooleanCheckbox id="nierezydent" value="#{umowaView.selected.angaz.nierezydent}">
-                        </p:selectBooleanCheckbox>
-                        <p:outputLabel value="data przyjazdu do Polski" for="datapolska"  style="color: #97B0F8;"/>
-                        <p:inputText id="datapolska" value="#{umowaView.selected.angaz.dataprzyjazdudopolski}" title="termin rozpoczecia pracy" styleClass="dataUmowy"  placeholder="____-__-__"  maxlength="10"/>
+  
 
                     </p:panelGrid>
                     <p:panelGrid columns="2">
@@ -213,7 +205,7 @@
                     </p:panelGrid>
                 </p:panelGrid>
                 <p:commandButton styleClass="buttonnorm" actionListener="#{umowaView.edit}" value="Edytuj" update="north, @(form)" rendered="#{umowaView.selected.id ne null}"/>
-                <p:commandButton styleClass="buttonnorm2" actionListener="#{umowaView.create}" value="Dodaj" update="north, @(form)"  rendered="#{umowaView.selected.id eq null}"/>
+                <p:commandButton styleClass="buttonnorm2" actionListener="#{umowaView.createzlecenie}" value="Dodaj" update="north, @(form)"  rendered="#{umowaView.selected.id eq null}"/>
                 <p:commandButton styleClass="buttonnorm2" value="Anuluj"  actionListener="#{umowaView.cancel}"  update="north, @(form)" process="@this"/>
             </h:panelGroup>
             <p:messages><p:autoUpdate/></p:messages>
